--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "main": "index.js",
   "author": "Natanael Silva <natanael96@live.com>",
   "license": "MIT",
+  "scripts": {
+    "start:dev": "tsnd --respawn --cls -r tsconfig-paths/register ./src/index.ts",
+    "start:prod": "node -r ts-node/register/transpile-only -r tsconfig-paths/register ./dist/src/index.js",
+    "build": "tsc"
+  },
   "devDependencies": {
     "@types/node": "^17.0.41",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
@@ -18,6 +23,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "prettier": "2.6.2",
     "ts-node": "^10.8.1",
+    "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^4.7.3"
   }
