--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Natanael Silva <natanael96@live.com>",
   "license": "MIT",
   "scripts": {
+    "start:nodemon": "nodemon",
     "start:dev": "tsnd --respawn --cls -r tsconfig-paths/register ./src/index.ts",
     "start:prod": "node -r ts-node/register/transpile-only -r tsconfig-paths/register ./dist/src/index.js",
     "build": "tsc"
@@ -21,6 +22,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "nodemon": "^2.0.16",
     "prettier": "2.6.2",
     "ts-node": "^10.8.1",
     "ts-node-dev": "^2.0.0",
