--- a/.editorconfig
+++ b/.editorconfig
@@ -6,9 +6,8 @@ root = true
 [*]
 end_of_line = lf
 insert_final_newline = true
-trim_trailing_whitespace = false
 
-[*.{js,json,yml}]
+[*.{ts,js,json,yml}]
 charset = utf-8
 indent_style = space
 indent_size = 2
