--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^4.7.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.1"
   }
 }
