--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start:nodemon": "nodemon",
     "start:dev": "tsnd --respawn --cls -r tsconfig-paths/register ./src/index.ts",
     "start:prod": "node -r ts-node/register/transpile-only -r tsconfig-paths/register ./dist/src/index.js",
-    "build": "tsc"
+    "build": "tsc -p tsconfig.prod.json",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.1",
     "@types/node": "^17.0.41",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
@@ -22,8 +26,10 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "jest": "^28.1.1",
     "nodemon": "^2.0.16",
     "prettier": "2.6.2",
+    "ts-jest": "^28.0.4",
     "ts-node": "^10.8.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.0.0",
