--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "husky": "^8.0.1",
     "jest": "^28.1.1",
     "nodemon": "^2.0.16",
     "prettier": "2.6.2",
