--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "tsc -p tsconfig.prod.json",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src/**/*.ts", 
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@types/jest": "^28.1.1",
@@ -29,6 +31,7 @@
     "git-commit-msg-linter": "^4.1.3",
     "husky": "^8.0.1",
     "jest": "^28.1.1",
+    "lint-staged": ">=10",
     "nodemon": "^2.0.16",
     "prettier": "2.6.2",
     "ts-jest": "^28.0.4",
@@ -39,5 +42,8 @@
   },
   "dependencies": {
     "dotenv": "^16.0.1"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix"
   }
 }
