--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,5 @@ insert_final_newline = true
 charset = utf-8
 indent_style = space
 indent_size = 2
+trim_trailing_whitespace = true
+single_quotes = true
