--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "got": "11.8.5"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
