chore: add eslint plugin security

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
         "standard",
         "eslint:recommended",
         "plugin:prettier/recommended",
+        "plugin:security/recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:import/errors",
         "plugin:import/warnings",
