--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-security": "^1.5.0",
     "git-commit-msg-linter": "^4.1.3",
     "husky": "^8.0.1",
     "jest": "^28.1.1",
@@ -41,8 +42,7 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
-    "dotenv": "^16.0.1",
-    "got": "11.8.5"
+    "dotenv": "^16.0.1"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
