--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,32 +1,32 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
-// https://github.com/microsoft/vscode-dev-containers/tree/v0.234.0/containers/javascript-node-postgres
-// Update the VARIANT arg in docker-compose.yml to pick a Node.js version
 {
 	"name": "Node Project Base",
 	"dockerComposeFile": "docker-compose.yml",
 	"service": "app",
 	"workspaceFolder": "/home/node/app",
-
-	"settings": {
-		"terminal.integrated.defaultProfile.linux": "zsh"
-	},
-
-	"extensions": [
-		"irongeek.vscode-env",
-		"wix.vscode-import-cost",
-		"ms-vscode.vscode-typescript-next",
-		"firsttris.vscode-jest-runner",
-		"cweijan.vscode-postgresql-client2",
-		"ms-ossdata.vscode-postgresql",
-		"prisma.prisma",
-		"mattpocock.ts-error-translator",
-		"rangav.vscode-thunder-client"
-	],
-
 	"features": {
-		"git": "latest",
-		"github-cli": "latest"
+		"ghcr.io/devcontainers/features/github-cli:1": {}
 	},
+
+  "customizations": {
+    "terminal": {
+      "command": "zsh",
+      "args": ["-l"]
+    },
+    "vscode": {
+      "extensions": [
+        "irongeek.vscode-env",
+        "wix.vscode-import-cost",
+        "ms-vscode.vscode-typescript-next",
+        "firsttris.vscode-jest-runner",
+        "cweijan.vscode-postgresql-client2",
+        "ms-ossdata.vscode-postgresql",
+        "prisma.prisma",
+        "mattpocock.ts-error-translator",
+        "rangav.vscode-thunder-client"
+
+      ]
+    }
+  },
 
 	"forwardPorts": [3333, 5432],
 
@@ -41,7 +41,7 @@
 		}
 	},
 
-	"postCreateCommand": "yarn install",
+	"postCreateCommand": "npm install",
 	"postStartCommand": "lsb_release -a",
 
 	"shutdownAction": "stopCompose",
