--- a/.editorconfig
+++ b/.editorconfig
@@ -1,14 +1,20 @@
-# EditorConfig is awesome: https://EditorConfig.org
+# EditorConfig is awesome: https://editorconfig.org
 
 # top-most EditorConfig file
 root = true
 
 [*]
-end_of_line = lf
-insert_final_newline = true
-
-[*.{ts,js,json,yml}]
 charset = utf-8
 indent_style = space
 indent_size = 2
+insert_final_newline = true
 trim_trailing_whitespace = true
+
+[*.{ts,js}]
+quote_type = single
+
+[*.{md,mdx}]
+max_line_length = off
+
+[*.{yml,yaml}]
+quote_type = double
